--- a/scss/percircle.scss
+++ b/scss/percircle.scss
@@ -274,7 +274,7 @@ html {
             font-size: 180px;
         }
     }
-    >span {
+    span {
         position: absolute;
         z-index: 1;
         width: 100%;
